--- a/index.html
+++ b/index.html
@@ -8,21 +8,27 @@
   <body>
     <header>
       <section class="navigation">
-        <img id="logo" src="images/logo.png" alt="logo">
-        <div class="container" onclick="myFunction(this)">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
-        <!-- <nav>
+        <section class="navigation-mobile">
+          <section class="logotype">
+              <img id="logo" src="images/logo_small_icon.png" alt="logo">
+              <h1 id="only-desktop">Let's get QUEEZY</h1>
+          </section>
+          <div id="menuToggler">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
+        </section>
+        <nav id="mainNav">
           <a href="#">Home</a>
           <a href="#">About us</a>
-          <a href="#">Upcoming events</a>
+          <a href="#">Upcoming Events</a>
           <a href="#">Join us!</a>
           <a href="#">Contact us</a>
-        </nav> -->
+        </nav>
       </section>
-      <p>•	After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and showcase your knowledge on specific topic or maybe even learn something you never knew before!<a href="#">Join our club</a> now and we will update you on our upcoming events!</p>
+      <p>We get QUEEZY every Wednesday and Friday!<br><a href="#">Join club now!</a></p>
+      <!-- <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and showcase your knowledge on specific topic or maybe even learn something you never knew before! <a href="#">Join our club</a> now and we will update you on our upcoming events!</p> -->
     </header>
 
   <script type="text/javascript" src="toggle.js"></script>
