--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a href="#">Contact us</a>
         </nav>
       </section>
-      <p>We get QUEEZY every Wednesday and Friday!<br><a href="#">Join club now!</a></p>
+      <p>We get QUEEZY every Wednesday and Friday!<br><a id="join-club" href="#">Join club now!</a></p>
       <!-- <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and showcase your knowledge on specific topic or maybe even learn something you never knew before! <a href="#">Join our club</a> now and we will update you on our upcoming events!</p> -->
     </header>
 
