--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="#">Home</a>
           <a href="#">About us</a>
           <a href="#">Upcoming Events</a>
-          <a href="#">Join us!</a>
+          <a href="#">Join us</a>
           <a href="#">Contact us</a>
         </nav>
       </section>
