--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
       <p>We get QUEEZY every Wednesday and Friday!<br><a id="join-club" href="#">Join club now!</a></p>
       <!-- <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and showcase your knowledge on specific topic or maybe even learn something you never knew before! <a href="#">Join our club</a> now and we will update you on our upcoming events!</p> -->
     </header>
+    <main>
+      <section class="events">
+        <section class="headings">
+          <h2>Upcoming Events</h2>
+          <h3>Week 18-24<span>th</span> October 2021</h3>
+        </section>
+        <section class="event-dates">
+          <div class="wednesday-event">
+            <p>2000s MUSIC QUIZ — WEDNESDAY — 19:00</p>
+            <img src="images/music.jpg" alt="">
+          </div>
+          <div class="friday-event">
+            <p>MARVEL MOVIE QUIZ — FRIDAY — 19:00</p>
+            <img src="images/marvel.jpg" alt="">
+          </div>
+        </section>
+      </section>
 
+    </main>
   <script type="text/javascript" src="toggle.js"></script>
   </body>
 </html>
