--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
         </section>
         <nav id="mainNav">
           <a href="#">Home</a>
-          <a href="#">About us</a>
           <a href="#">Upcoming Events</a>
+          <a href="#">About us</a>
           <a href="#">Join us</a>
           <a href="#">Contact us</a>
         </nav>
       </section>
       <p>We get QUEEZY every Wednesday and Friday!<br><a id="join-club" href="#">Join club now!</a></p>
-      <!-- <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and showcase your knowledge on specific topic or maybe even learn something you never knew before! <a href="#">Join our club</a> now and we will update you on our upcoming events!</p> -->
     </header>
     <main>
       <section class="events">
@@ -48,6 +47,23 @@
           </div>
         </section>
       </section>
+      <section class=about-join>
+        <section class="about-us">
+          <h2>About us</h2>
+          <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and participate in a quiz, where you can showcase your knowledge on specific topic or maybe even learn something you never knew before! Join our club now and we will update you on our upcoming events! </p>
+        </section>
+        <section class="join-us">
+          <h2>Join Us</h2>
+          <form class="joining-form" action="index.html" method="post">
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name">
+            <label for="email">Email Address:</label>
+            <input type="text" name="email" id="email">
+            <button type="submit" name="button">Join</button>
+          </form>
+        </section>
+      </section>
+
 
     </main>
   <script type="text/javascript" src="toggle.js"></script>
