Final with footer

--- a/index.html
+++ b/index.html
@@ -63,9 +63,17 @@
           </form>
         </section>
       </section>
-
-
     </main>
+    <footer>
+      <img id="logo" src="images/logo_small_icon.png" alt="logo">
+      <div class="icons">
+        <img src="images/facebook.png" alt="">
+        <img src="images/instagram.png" alt="">
+        <img src="images/twitter.png" alt="">
+      </div>
+      <p><span>Email:</span> quizzy@quizzy.com</p>
+      <p><span>Number:</span> +447123456789</p>
+    </footer>
   <script type="text/javascript" src="toggle.js"></script>
   </body>
 </html>
