--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section class="navigation">
         <section class="navigation-mobile">
           <section class="logotype">
-              <img id="logo" src="images/logo_small_icon.png" alt="logo">
+              <img class="logo" src="images/logo_small_icon.png" alt="logo">
               <h1 id="only-desktop">Let's get QUEEZY</h1>
           </section>
           <div id="menuToggler">
@@ -22,16 +22,16 @@
         </section>
         <nav id="mainNav">
           <a href="#">Home</a>
-          <a href="#">Upcoming Events</a>
-          <a href="#">About us</a>
-          <a href="#">Join us</a>
-          <a href="#">Contact us</a>
+          <a href="#events">Upcoming Events</a>
+          <a href="#about-us">About us</a>
+          <a href="#join-us">Join us</a>
+          <a href="#contact">Contact us</a>
         </nav>
       </section>
       <p>We get QUEEZY every Wednesday and Friday!<br><a id="join-club" href="#">Join club now!</a></p>
     </header>
     <main>
-      <section class="events">
+      <section id="events" class="events">
         <section class="headings">
           <h2>Upcoming Events</h2>
           <h3>Week 18-24<span>th</span> October 2021</h3>
@@ -48,11 +48,11 @@
         </section>
       </section>
       <section class=about-join>
-        <section class="about-us">
+        <section id="about-us" class="about-us">
           <h2>About us</h2>
           <p>After a long day at work – you deserve some chill time! Every Wednesday and Friday we get “quizzy” in the “Quizzy pub” where you can chill out for a drink or meal and participate in a quiz, where you can showcase your knowledge on specific topic or maybe even learn something you never knew before! Join our club now and we will update you on our upcoming events! </p>
         </section>
-        <section class="join-us">
+        <section id="join-us" class="join-us">
           <h2>Join Us</h2>
           <form class="joining-form" action="index.html" method="post">
             <label for="name">Name:</label>
@@ -64,8 +64,8 @@
         </section>
       </section>
     </main>
-    <footer>
-      <img id="logo" src="images/logo_small_icon.png" alt="logo">
+    <footer id="contact">
+      <img class="logo" src="images/logo_small_icon.png" alt="logo">
       <div class="icons">
         <img src="images/facebook.png" alt="">
         <img src="images/instagram.png" alt="">
